Added filter feature to data tables

--- a/MOJN STLK 2009-2019.Rmd
+++ b/MOJN STLK 2009-2019.Rmd
@@ -50,7 +50,7 @@ benchmark.elevations$ClosureError_ft <- round(benchmark.elevations$ClosureError_
 benchmark.elevations$FinalCorrectedElevation_ft <- round(benchmark.elevations$FinalCorrectedElevation_ft, 4)
 
 benchmark.elevations %>%
-  DT::datatable()
+  DT::datatable(filter = "top")
 ```
 
 ## String survey heights
@@ -62,7 +62,7 @@ string.heights$MeanHeight_ft <- round(string.heights$MeanHeight_ft, 4)
 string.heights$StDevHeight_ft <- round(string.heights$StDevHeight_ft, 4)
 
 string.heights %>%
-  DT::datatable()
+  DT::datatable(filter = "top")
 ```
 
 ## String survey elevations
@@ -74,7 +74,7 @@ string.elevations$MeanFinalElevation_ft <- round(string.elevations$MeanFinalElev
 string.elevations$StDevFinalElevation_ft <- round(string.elevations$StDevFinalElevation_ft, 4)
 
 string.elevations %>%
-  DT::datatable()
+  DT::datatable(filter = "top")
 ```
 
 ## Benchmark plots
@@ -93,7 +93,7 @@ This is a list of records where Secchi depth measurements are greater than the l
 depths.exceed.lake <- qcSecchiGTDepth(conn)
 
 depths.exceed.lake %>%
-  DT::datatable()
+  DT::datatable(filter = "top")
 ```
 
 There are `r nrow(depths.exceed.lake)` records with this inconsistency.
@@ -104,7 +104,7 @@ This is a list of records where the lake **is** dry and clarity data or Secchi d
 lake.dry.depths.exist <- qcLakeDryMeasurementsExist(conn)
 
 lake.dry.depths.exist %>%
-  DT::datatable()
+  DT::datatable(filter = "top")
 ```
 There are `r nrow(lake.dry.depths.exist)` records with this inconsistency.
 
@@ -114,7 +114,7 @@ This is a list of records where the lake **is not** dry and calmness, on bottom,
 lake.not.dry.no.clarity <- qcLakeNotDryMeasurementsMissing(conn)
 
 lake.not.dry.no.clarity %>%
-  DT::datatable()
+  DT::datatable(filter = "top")
 ```
 There are `r nrow(lake.not.dry.no.clarity)` records with missing data.
 
@@ -124,7 +124,7 @@ This is a list of records where the Secchi disk **is not** visible on the bottom
 lake.not.dry.no.depths <- qcSecchiDepthMissing(conn)
 
 lake.not.dry.no.depths %>%
-  DT::datatable()
+  DT::datatable(filter = "top")
 ```
  There are `r nrow(lake.not.dry.no.depths)` records with missing data.
 
@@ -136,7 +136,7 @@ These are stream water quality values that fall above or below the ranges that w
 # wq.stream.sanity <- qcStreamWqSanity(conn)
 
 # wq.stream.sanity %>%
-#  DT::datatable()
+#  DT::datatable(filter = "top")
 ```
 There are **r nrow(wq.stream.sanity)** measurements outside of expected ranges.
 
@@ -146,7 +146,7 @@ These are lake water quality values that fall above or below the ranges that we 
 # wq.lake.sanity <- qcLakeWqSanity(conn)
 
 # wq.lake.sanity %>%
-#  DT::datatable()
+#  DT::datatable(filter = "top")
 ```
 There are **r nrow(wq.lake.sanity)** measurements outside of expected ranges.
 
@@ -156,7 +156,7 @@ These are stream water quality values that have data quality flags. I = Informat
 # wq.stream.flags <- qcStreamWqFlags(conn)
 
 # wq.stream.flags %>%
-#  DT:datatable()
+#  DT:datatable(filter = "top")
 ```
 There are **r nrow(wq.stream.flags)** flagged measurements.
 
@@ -166,7 +166,7 @@ These are lake water quality values that have data quality flags. I = Informatio
 # wq.lake.flags <- qcLakeWqFlags(conn)
 
 # wq.lake.flags %>%
-#  DT:datatable()
+#  DT:datatable(filter = "top")
 ```
 There are **r nrow(wq.lake flags)** flagged measurements.
 
@@ -178,7 +178,7 @@ These are water chemistry values that have data quality flags. I = Information: 
 chem.flags <- qcChemFlags(conn)
 
 chem.flags %>%
-  DT::datatable()
+  DT::datatable(filter = "top")
 ```
 There are `r nrow(chem.flags)` flagged analytes.
 
@@ -188,7 +188,7 @@ Laboratory duplicates and triplicates are re-analyses of an analyte from the sam
 lab.dupes <- qcChemLabDupes(conn)
 
 lab.dupes %>%
-  DT::datatable()
+  DT::datatable(filter = "top")
 ```
 There are `r nrow(lab.dupes %>% filter(RPD > 30))` duplicates with RPD values above the 30% MQO threshold.
 
@@ -198,7 +198,7 @@ Field duplicates are additional samples collected from the same location at appr
 field.dupes <- qcChemFieldDupes(conn)
 
 field.dupes %>%
-  DT::datatable()
+  DT::datatable(filter = "top")
 ```
 There are `r nrow(field.dupes %>% filter(RPD > 30))` duplicates with RPD values above the 30% MQO threshold.
 
@@ -209,7 +209,7 @@ Field blanks are bottles filled with distilled water as opposed to water sampled
 # field.blanks <- qcChemFieldBlanks(conn)
 
 #field.blanks %>%
-#  DT::datatable()
+#  DT::datatable(filter = "top")
 ```
 There are **r nrow(field.blanks)** analytes from blanks with concentrations greater than the MDL for that analyte.
 
@@ -219,7 +219,7 @@ These are the records where the concentration of total dissolved nitrogen (TDN) 
 chem.TDN <- qcChemTDN(conn)
 
 chem.TDN %>%
-  DT::datatable()
+  DT::datatable(filter = "top")
 ```
 There are `r nrow(chem.TDN %>% filter(TDNvUTN >= 0.02))` records where the concentration of dissolved nitrogen is greater than the total nitrogen concentration and the difference is outside the normal limits of variability.
 
@@ -229,7 +229,7 @@ These are the records where the concentration of nitrate (NO3) and nitrite (NO2)
 chem.NO3NO2 <- qcChemNO3NO2(conn)
 
 chem.NO3NO2 %>%
-  DT::datatable()
+  DT::datatable(filter = "top")
 ```
 There are `r nrow(chem.NO3NO2)` records where the concentration of nitrate and nitrate is greater than the concentration of either total nitrogen or total dissolved nitrogen.
 
@@ -239,7 +239,7 @@ These are the records where the concentration of total dissolved phosphorus exce
 chem.TDP <- qcChemTDP(conn)
 
 chem.TDP %>%
-  DT::datatable()
+  DT::datatable(filter = "top")
 ```
 There are `r nrow(chem.TDP %>% filter(TDPvUTP >= 0.003))` records where the concentration of dissolved phosphorus is greater than the total phosphorus concentration and the difference is outside the normal limits of variability.
 
@@ -250,7 +250,7 @@ lookup <- getMDLLookup()
 chem.MDL <- qcChemMDL(conn)
 
 chem.MDL %>%
-  DT::datatable()
+  DT::datatable(filter = "top")
 ```
 There are `r nrow(chem.MDL)` analytes with concentrations less than or equal to the MDL.
 
@@ -261,7 +261,7 @@ lookup <- getMDLLookup()
 chem.ML <- qcChemML(conn)
 
 chem.ML %>%
-  DT::datatable()
+  DT::datatable(filter = "top")
 ```
 There are `r nrow(chem.ML)` analytes with concentrations less than or equal to the ML.
 
@@ -272,7 +272,7 @@ These are records with discrepancies between taxa group count (number of taxa wi
 bmi.discrepancies <- qcBMIDiscrepancies(conn)
 
 bmi.discrepancies %>%
-  DT::datatable()
+  DT::datatable(filter = "top")
 ```
 There are `r nrow(bmi.discrepancies)` metrics with discrepancies between taxa group count and taxa group abundance.
 
@@ -285,7 +285,7 @@ There are `r nrow(bmi.discrepancies)` metrics with discrepancies between taxa gr
 # q.completeness <- qcDischargeCompleteness(conn)
 
 # q.completeness %>%
-#  DT::datatable()
+#  DT::datatable(filter = "top")
 ```
 
 ## Data quality grades
@@ -293,7 +293,7 @@ There are `r nrow(bmi.discrepancies)` metrics with discrepancies between taxa gr
 # q.grades <- qcDischargeGrades(conn)
 
 # q.grades %>%
-#  DT::datatable()
+#  DT::datatable(filter = "top")
 ```
 
 ## Completeness plot
@@ -312,7 +312,7 @@ There are `r nrow(bmi.discrepancies)` metrics with discrepancies between taxa gr
 # wq.completeness <- qcWqCompleteness(conn)
 
 # wq.completeness %>%
-#  DT::datatable()
+#  DT::datatable(filter = "top")
 ```
 
 ## Data quality grades
@@ -320,7 +320,7 @@ There are `r nrow(bmi.discrepancies)` metrics with discrepancies between taxa gr
 # wq.grades <- qcWqGrades(conn)
 
 # wq.grades %>%
-#  DT::datatable()
+#  DT::datatable(filter = "top")
 ```
 
 ## Completeness plot
